// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Main Should  create a Scroll Text if the CardsArray is empty 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Main
    cards={Array []}
    film={
        Object {
            "opening": "It is a dark time for...",
            "title": "Attack of the clones",
            "year": "2002",
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <ScrollText
        film={
                Object {
                        "opening": "It is a dark time for...",
                        "title": "Attack of the clones",
                        "year": "2002",
                      }
        }
/>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "film": Object {
          "opening": "It is a dark time for...",
          "title": "Attack of the clones",
          "year": "2002",
        },
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": "main",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <ScrollText
          film={
                    Object {
                              "opening": "It is a dark time for...",
                              "title": "Attack of the clones",
                              "year": "2002",
                            }
          }
/>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "film": Object {
            "opening": "It is a dark time for...",
            "title": "Attack of the clones",
            "year": "2002",
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": "main",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Main Should create a cardsContainer component if there are items in the Cards array 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Main
    cards={
        Array [
            Object {
              "homeWorldName": "Tatooine",
              "name": "Luke Skywalker",
              "population": "200000",
              "species": "Human",
            },
          ]
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <CardsContainer
        cards={
                Array [
                        Object {
                          "homeWorldName": "Tatooine",
                          "name": "Luke Skywalker",
                          "population": "200000",
                          "species": "Human",
                        },
                      ]
        }
        favorites={undefined}
        showFavorites={undefined}
        targetFavorites={undefined}
        toggleFavorites={undefined}
/>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "cards": Array [
          Object {
            "homeWorldName": "Tatooine",
            "name": "Luke Skywalker",
            "population": "200000",
            "species": "Human",
          },
        ],
        "favorites": undefined,
        "showFavorites": undefined,
        "targetFavorites": undefined,
        "toggleFavorites": undefined,
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": "main",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <CardsContainer
          cards={
                    Array [
                              Object {
                                "homeWorldName": "Tatooine",
                                "name": "Luke Skywalker",
                                "population": "200000",
                                "species": "Human",
                              },
                            ]
          }
          favorites={undefined}
          showFavorites={undefined}
          targetFavorites={undefined}
          toggleFavorites={undefined}
/>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "cards": Array [
            Object {
              "homeWorldName": "Tatooine",
              "name": "Luke Skywalker",
              "population": "200000",
              "species": "Human",
            },
          ],
          "favorites": undefined,
          "showFavorites": undefined,
          "targetFavorites": undefined,
          "toggleFavorites": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": "main",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
